# candidate-test-44c70b4c

./: .gitignore  CANDIDATE_NOTES.md  README.md  Taskfile.dist.yml  docker-compose.yml  flake.nix  seed_users.md
backend/: conftest.py  pyproject.toml
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/tests/: test_auth.py  test_permissions.py
backend/billing/: dates.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/billing/migrations/: 0001_initial.py  0002_alter_invoicelineitem_timesheet_entry.py
backend/billing/tests/: conftest.py  test_billing.py
backend/config/: celery.py  settings.py  urls.py
backend/contracts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/contracts/migrations/: 0001_initial.py
backend/contracts/tests/: test_contract_create.py  test_contracts.py  test_timesheets.py
backend/core/management/commands/: seed.py
backend/webhooks/: models.py  serializers.py  signing.py  tasks.py  urls.py  views.py
backend/webhooks/migrations/: 0001_initial.py
backend/webhooks/tests/: conftest.py  test_webhooks.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: auth.ts  billing.ts  client.ts  contracts.ts  timesheets.ts  webhooks.ts
frontend/src/components/: Nav.tsx  StatusBadge.tsx
frontend/src/hooks/: useAuth.tsx  (+1 more)
plans/: 0_INFRA.md  1_PERMS.md  2_TASK_B_BILLING.md  3_TASK_C_WEBHOOKS.md
services/webhook-receiver/: Dockerfile  index.js  package.json
(+12 files in other folders)
